--- a/Online banking system.ipynb
+++ b/Online banking system.ipynb
@@ -34,7 +34,7 @@
     "**2. Rahma Tarek Mohamed Ali**  \r\n",
     "**3. Shimaa Abdelaal Mohammed Fawzy**  \r\n",
     "**4. Abdelrahman Mohamed Rabie Mohammdy**  \r\n",
-    "**5. Msrwa Samir Abdelssine**\r\n"
+    "**5. Marwa Samir Abdelrahim Hussine**\r\n"
    ]
   },
   {
@@ -53,7 +53,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### User Class :"
    ]
